--- a/Library-System/Library-System.vcxproj.filters
+++ b/Library-System/Library-System.vcxproj.filters
@@ -19,4 +19,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Library.db">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Queries.sql">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Test.sql">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
