Updated queries and DB file

--- a/Library-System/Library-System.vcxproj.filters
+++ b/Library-System/Library-System.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Models">
+      <UniqueIdentifier>{1cbdca9e-a1b7-4868-8561-67c185dfeb02}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Library-System.cpp">
@@ -20,13 +23,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Library.db">
-      <Filter>Resource Files</Filter>
-    </None>
     <None Include="Queries.sql">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="Test.sql">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Library.db">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
