Got adding a book to work through the sqlite interface

--- a/Library-System/Library-System.vcxproj
+++ b/Library-System/Library-System.vcxproj
@@ -152,6 +152,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Library-System.cpp" />
+    <ClCompile Include="shell.c" />
+    <ClCompile Include="sqlite3.c" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Library.db" />
@@ -164,10 +166,8 @@
     <ClInclude Include="Checkout.h" />
     <ClInclude Include="Contributors.h" />
     <ClInclude Include="Members.h" />
-    <ClInclude Include="resource.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="Library-System.rc" />
+    <ClInclude Include="sqlite3.h" />
+    <ClInclude Include="sqlite3ext.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
