--- a/Library-System/Library-System.vcxproj
+++ b/Library-System/Library-System.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="Checkout.h" />
     <ClInclude Include="Contributors.h" />
     <ClInclude Include="Members.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="sqlite3.h" />
     <ClInclude Include="sqlite3ext.h" />
   </ItemGroup>
