--- a/Library-System/Library-System.vcxproj.filters
+++ b/Library-System/Library-System.vcxproj.filters
@@ -61,5 +61,8 @@
     <ClInclude Include="sqlite3ext.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Model.h">
+      <Filter>Models</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
