--- a/Object-Relational-Mapper/Object-Relational-Mapper.vcxproj
+++ b/Object-Relational-Mapper/Object-Relational-Mapper.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="sqlite3.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Authors.h" />
     <ClInclude Include="sqlite3.h" />
     <ClInclude Include="sqlite3ext.h" />
   </ItemGroup>
