--- a/Object-Relational-Mapper/Object-Relational-Mapper.vcxproj.filters
+++ b/Object-Relational-Mapper/Object-Relational-Mapper.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="sqlite3ext.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Authors.h">
+      <Filter>Resource Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Library.db">
