updated insert statement. Need to complete it. Must alter auto generated get values function to be able to map strings and other types to sql statements.

--- a/Library-System/Library-System.vcxproj
+++ b/Library-System/Library-System.vcxproj
@@ -163,7 +163,7 @@
   <ItemGroup>
     <ClInclude Include="Authors.h" />
     <ClInclude Include="Books.h" />
-    <ClInclude Include="Checkout.h" />
+    <ClInclude Include="Checkouts.h" />
     <ClInclude Include="Contributors.h" />
     <ClInclude Include="Members.h" />
     <ClInclude Include="Model.h" />
