Framework for select getting laid

--- a/Library-System/Library-System.vcxproj.filters
+++ b/Library-System/Library-System.vcxproj.filters
@@ -67,5 +67,11 @@
     <ClInclude Include="Members.h">
       <Filter>Models</Filter>
     </ClInclude>
+    <ClInclude Include="SqlException.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Utility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
