--- a/Library-System/Library-System.vcxproj
+++ b/Library-System/Library-System.vcxproj
@@ -167,9 +167,11 @@
     <ClInclude Include="Contributors.h" />
     <ClInclude Include="Members.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="SqlException.h" />
     <ClInclude Include="Sqlite.h" />
     <ClInclude Include="sqlite3.h" />
     <ClInclude Include="sqlite3ext.h" />
+    <ClInclude Include="Utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
