--- a/Library-System-Interface/Library-System-Interface.vcxproj.filters
+++ b/Library-System-Interface/Library-System-Interface.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="cMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cHeader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cApp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="cMain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cHeader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
