--- a/Library-System-Web/appsettings.Development.json
+++ b/Library-System-Web/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Library_System_Web-F72C0F55-E3A5-4381-BD9E-6C2155398FAC;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "LibrarySystemConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=LibrarySystem;user=admin;password=Summer2021"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
